# turtle

./: README.md  SETUP_COMPLETE.md  new_prompt.text  pyproject.toml  setup_db.py  user_rules.txt
.cursor/rules/: cursorrules.mdc
app/: config.py  main.py
app/database/: db.py  models.py
app/middleware/: logging.py
app/routers/: db_health.py  health.py
migrations/: env.py
trading_alerts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
